2006-03-14  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaDriverInit):
	* exa/exa_accel.c: (exaFillSpans), (exaCopyNtoN),
	(exaPolyFillRect), (exaSolidBoxClipped), (exaFillRegionSolid),
	(exaFillRegionTiled), (exaGetImage), (exaGetSpans):
	* exa/exa_migration.c: (exaPixmapIsPinned), (exaMigrateTowardFb),
	(exaMigrateTowardSys), (exaDoMigration):
	* exa/exa_priv.h:
	* exa/exa_render.c: (exaOpReadsDestination),
	(exaTryDriverSolidFill), (exaTryDriverComposite), (exaComposite),
	(exaGlyphs):
	* exa/exa_unaccel.c: (exaGetPixmapFirstPixel):
	Move migration logic to a new function, exaDoMigration().  This is
	largely a manual conversion to allow for different migration schemes
	to be implemented reasonably, but does include some minor improvements
	such as accounting for pinned pixmaps not being acceleratable, and for
	our current GetImage and GetSpans not being accelerated.

2006-03-14  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaFillRegionTiled):
	* exa/exa_priv.h:
	* exa/exa_render.c: (exaTryDriverSolidFill):
	* exa/exa_unaccel.c: (exaGetPixmapFirstPixel):
	Pull code for getting the (0,0) pixel from a pixmap out to a separate
	function, since it gets repeated (with bad error handling, in one case).

2006-03-14  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Bail out early if screen
	doesn't support DRI.

2006-3-13   Deron Johnson  <deron.johnson@sun.com>

	* composite/compalloc.c
	* composite/compext.c
	* composite/compinit.c
	* composite/compint.h
	* composite/compwindow.c
	* xfixes/cursor.c
	* xfixes/xfixes.c
	* xfixes/xfixesint.h
	Composite Version 0.3: CompositeGetOverlayWindow, CompositeReleaseOverlayWindow
	Xfixes Version 4.0: XFixesHideCursor, XFixesShowCursor

2006-03-12  Kristian Høgsberg  <krh@redhat.com>

	First batch of AIGLX fixes from David Reveman.

	* GL/mesa/X/xf86glx.c (GlxGetMesaProvider): Add getter for Mesa
	provider.

	* GL/glx/glxvisuals.c (GlxInitVisuals): Export this for Xgl.
